# whatismyip

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.py  domainManager.py  geo.py  main.py  managers.py  mapgeom.py  models.py  pyproject.toml  rdap.py  requirements.txt  screen.pen  security.py  viewmodel.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  security-audit.yml
docs/superpowers/plans/: 2026-07-14-whatismyip-redesign.md
docs/superpowers/specs/: 2026-07-14-whatismyip-redesign-design.md
scripts/: build_gazetteer.py  fetch_fonts.sh
static/css/: jsoneditor.css  whatismyip.css
static/geo/: cities.json  countries.json
static/js/: app.js  fingerprint.js  map.js
templates/: browser.html
tests/: conftest.py  test_basic.py  test_geo.py  test_managers.py  test_mapgeom.py  test_page.py  test_rdap.py  test_security.py  test_viewmodel.py
