[tool.poetry]
name = "whatismyip"
version = "0.2.0"
description = ""
authors = ["1kko <me@1kko.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.128.0"}
python-whois = "^0.9.4"
geoip2fast = "^1.2.2"
apscheduler = "^3.10.4"
tld = "^0.13"
requests = "^2.32.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
